--- a/main-server/src/main/resources/templates/admin/common/sidebar.html
+++ b/main-server/src/main/resources/templates/admin/common/sidebar.html
@@ -12,6 +12,8 @@
             <i class="fas fa-question-circle"></i>퀴즈 관리</a></li>
         <li><a href="/admin/users" class="sidebar-link" data-page="users">
             <i class="fas fa-users"></i>사용자 관리</a></li>
+        <li><a href="/admin/saving" class="sidebar-link" data-page="saving">
+            <i class="fas fa-piggy-bank"></i>적금 관리</a></li>
     </ul>
     <link rel="icon" href="/static/favicon.ico" />
 </nav>
