--- a/admin-server/src/main/resources/templates/admin/login.html
+++ b/admin-server/src/main/resources/templates/admin/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리자 로그인 - 파이낸셜 프리덤</title>
-    <link rel="icon" href="/static/favicon.ico" />
+    <link rel="icon" href="/admin/static/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link href="/static/admin/css/login.css" rel="stylesheet">
+    <link href="/admin/static/admin/css/login.css" rel="stylesheet">
 </head>
 <body>
     <div class="login-container">
@@ -40,7 +40,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/admin/js/login-handler.js"></script>
+    <script src="/admin/static/admin/js/login-handler.js"></script>
 </body>
 </html>
 
